test/tests/stages/14_pointers/invalid_parse/malformed_abstract_declarator.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  (
  int
  (
  *
  )
  *
  )
  const int(10)
  ;
  return
  const int(0)
  ;
  }
